Fix scoreboard scss centering on small screens

--- a/src/styles/Scoreboard.scss
+++ b/src/styles/Scoreboard.scss
@@ -2,6 +2,16 @@
   grid-area: scoreboard;
   padding: min(2rem, 4vw);
 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+
+  @media screen and (min-width: 600px) {
+    // on large screens, break out onto separate lines
+    display: block;
+  }
+
   .scoreboard-wrapper {
     display: flex;
     gap: 1rem;
